kubernetes/apps/backlog-portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backlog-portal
  namespace: backlog-portal
spec:
  selector:
    app: backlog-portal
  ports:
    - name: http
      port: 8080
      targetPort: 8080
